# wready

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: default_server.launch  test_2_clients.launch
msg/: InitNotify.msg  InitProgress.msg
nodes/: default_server.py  done.py  test_client.py
src/wready/: __init__.py  sig_handler.py  wready_client.py  wready_server.py
srv/: InitNotify.srv  InitProgress.srv  InitRequest.srv
